--- a/go-node/go-barber/package.json
+++ b/go-node/go-barber/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "pg": "^7.10.0",
+    "sequelize": "^5.8.5"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -14,7 +16,8 @@
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "sequelize-cli": "^5.4.0"
   },
   "scripts": {
     "start": "nodemon src/index.js"
