--- a/go-node/go-barber/package.json
+++ b/go-node/go-barber/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "nunjucks": "^3.2.0",
     "pg": "^7.10.0",
