--- a/go-node/go-barber/package.json
+++ b/go-node/go-barber/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-loki": "^1.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.10.0",
