--- a/go-node/go-barber/package.json
+++ b/go-node/go-barber/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-loki": "^1.1.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
